<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            style="@style/collapsingToolbar"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewSearch"
                style="@style/cardSearch">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/descriptionSearchRepositories"
                    android:src="@drawable/outline_search_black_24" />

                <EditText
                    android:id="@+id/editTextSearch"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hintEnterUserLogin"
                    android:importantForAutofill="no"
                    android:textColorHint="@color/black" />

            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewHintStocks"
                style="@style/textViewH3ConstrainedWidth"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/titleSearchRepositoryByLogin" />

            <ImageView
                android:id="@+id/imageViewFolder"
                style="@style/textViewH2"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/descriptionFolder"
                android:src="@drawable/outline_folder_black_24" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewEmptyList"
        style="@style/textViewH1"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/hintEmptyList"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        style="@style/circularProgressBar"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRepositories"
        style="@style/recyclerViewRepositories"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/fab"
        android:contentDescription="@string/descriptionScrollToTop" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
